--- a/css/app.css
+++ b/css/app.css
@@ -20,7 +20,6 @@
 	height: 400px;
 	width: 25%;
 	margin: 20px;
-	padding: 5px;
 	text-align: center;
 }
 
@@ -76,6 +75,15 @@
 	padding: 5px;
 }
 
+.player-header {
+	display: flex;
+	justify-content: flex-start;
+	align-items: flex-start;
+	text-align: left;
+	margin: 5px;
+}
+
 .player-portrait {
-	width: 80%;
+	width: 40%;
+	margin: 5px;
 }
