--- a/css/app.css
+++ b/css/app.css
@@ -115,3 +115,30 @@
 .battle-log p {
 	
 }
+
+/*Modal for when game is lost*/
+.modal {
+	background-color: rgba(0, 0, 0, 0.4);
+	position: fixed;
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 100%;
+}
+
+.popup {
+	background-color: white;
+	border: 1px solid #444;
+	border-radius: 5px;
+	margin: 10% auto;
+	padding: 20px;
+	width: 250px;
+	text-align: center;
+	animation-name: zoom;
+    animation-duration: 0.6s;
+}
+
+@keyframes zoom {
+    from {transform:scale(0)} 
+    to {transform:scale(1)}
+}
