--- a/css/app.css
+++ b/css/app.css
@@ -21,6 +21,29 @@
 	width: 25%;
 	margin: 20px;
 	text-align: center;
+	position: relative;
+	transition: transform 0.5s;
+	transform-style: preserve-3d;
+}
+
+.card-back {
+	position: absolute;
+	height: 100%;
+	width: 100%;
+	backface-visibility: hidden;
+	z-index: -1;
+}
+
+.card-front {
+	position: absolute;
+	height: 100%;
+	width: 100%;
+	transform: rotateY(180deg);
+	backface-visibility: hidden;
+}
+
+.flipped {
+	transform: rotateY(180deg);
 }
 
 .ui {
