--- a/css/app.css
+++ b/css/app.css
@@ -11,14 +11,13 @@
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	width: 80%;
 	border: 1px solid black;
 }
 
 .card {
 	border: 1px solid black;
 	height: 400px;
-	width: 25%;
+	width: 250px;
 	margin: 20px;
 	text-align: center;
 	position: relative;
@@ -40,6 +39,10 @@
 	width: 100%;
 	transform: rotateY(180deg);
 	backface-visibility: hidden;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	
 }
 
 .flipped {
@@ -49,26 +52,36 @@
 .ui {
 	border: 1px solid black;
 	height: 400px;
-	width: 40%;
+	width: 350px;
 	position: relative;
+	text-align: center;
 }
 
-.start-game {
+.centered {
 	position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 }
 
-.btn-new-game {
-	height: 100px;
-	width: 100px;
-	padding: 10px;
+.btn {
+	padding: 5px;
 }
 
-.character-create,
+h2 {
+	margin: 5px;
+}
+
 .roll-stats {
-	text-align: center;
+	height: 100%;
+}
+
+.reroll {
+	height: 90%;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	align-items: center;
 }
 
 .portrait-select {
@@ -99,10 +112,6 @@
 	width: 60%;
 }
 
-.btn-ready {
-	padding: 5px;
-}
-
 .player-header {
 	display: flex;
 	justify-content: flex-start;
@@ -116,9 +125,13 @@
 	margin: 5px;
 }
 
+.player-details {
+	
+}
+
 .stats {
 	width: 50%;
-	margin: auto;
+	text-align: left;
 }
 
 .enemy-portrait {
@@ -130,9 +143,13 @@
 	overflow: auto;
 	position: absolute;
 	bottom: 0;
-	height: 30%;
+	left: 50%;
+	transform: translateX(-50%);
+	height: 18%;
+	width: 80%;
 	display: flex;
 	flex-direction: column-reverse;
+	text-align: left;
 }
 
 .battle-log p {
