--- a/css/app.css
+++ b/css/app.css
@@ -3,6 +3,17 @@
 	padding: 0;
 }
 
+body {
+	font-family: Arial, sans-serif;
+	background-color: #dadada;
+}
+
+h2,
+h3 {
+	font-family: Tangerine, cursive;
+	font-size: 1.8em;
+}
+
 .game-area {
 	display: flex;
 	justify-content: center;
@@ -11,18 +22,23 @@
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	border: 1px solid black;
 }
 
 .card {
-	border: 1px solid black;
+	box-shadow: 2px 2px 6px 2px #989898;
+	border: 3px solid #3e3e3e;
 	height: 400px;
-	width: 250px;
+	width: 200px;
 	margin: 20px;
 	text-align: center;
 	position: relative;
 	transition: transform 0.5s;
 	transform-style: preserve-3d;
+	background-image: url('../images/enemy-symbol.png');
+	background-size: contain;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-color: #6e6e6e;
 }
 
 .card-back {
@@ -42,7 +58,9 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	
+	background-color: white;
+	box-sizing: border-box;
+	padding: 10px;
 }
 
 .flipped {
@@ -50,7 +68,8 @@
 }
 
 .ui {
-	border: 1px solid black;
+	box-shadow: 2px 2px 6px 2px #9c9c9c;
+	background-color: white;
 	height: 400px;
 	width: 350px;
 	position: relative;
@@ -65,19 +84,24 @@
 }
 
 .btn {
+	margin: 5px;
 	padding: 5px;
 }
 
-h2 {
-	margin: 5px;
+.text-right {
+	text-align: right;
 }
 
-.roll-stats {
+.ui-screen {
 	height: 100%;
+	padding: 10px;
+	box-sizing: border-box;
 }
 
 .reroll {
 	height: 90%;
+	width: 50%;
+	margin: auto;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
@@ -113,15 +137,11 @@ h2 {
 }
 
 .player-header {
-	display: flex;
-	justify-content: flex-start;
-	align-items: flex-start;
-	text-align: left;
-	margin: 5px;
+	
 }
 
 .player-portrait {
-	width: 40%;
+	width: 65%;
 	margin: 5px;
 }
 
@@ -130,13 +150,25 @@ h2 {
 }
 
 .stats {
-	width: 50%;
+	width: 100%;
 	text-align: left;
 }
 
 .enemy-portrait {
 	width: 80%;
-	margin: 5px;
+	margin: 60px 0;
+}
+
+.town-screen {
+	background-image: url('../images/town.jpg');
+	background-position: center;
+	background-size: 250%;
+}
+
+.battle-screen {
+	background-image: url('../images/arena.jpg');
+	background-position: center;
+	background-size: cover;
 }
 
 .log-container {
@@ -150,6 +182,12 @@ h2 {
 	display: flex;
 	flex-direction: column-reverse;
 	text-align: left;
+	font-size:0.8em;
+	padding: 5px;
+	border-top: 1px solid #9c9c9c;
+	border-left: 1px solid #9c9c9c;
+	border-right: 1px solid #9c9c9c;
+	background-color: white;
 }
 
 .battle-log p {
