--- a/css/app.css
+++ b/css/app.css
@@ -8,6 +8,11 @@ body {
 	background-color: #dadada;
 }
 
+h1 {
+	font-family: Tangerine, cursive;
+	font-size: 3em;
+}
+
 h2,
 h3 {
 	font-family: Tangerine, cursive;
@@ -25,8 +30,6 @@ h3 {
 }
 
 .card {
-	box-shadow: 2px 2px 6px 2px #989898;
-	border: 3px solid #3e3e3e;
 	height: 400px;
 	width: 200px;
 	margin: 20px;
@@ -34,11 +37,6 @@ h3 {
 	position: relative;
 	transition: transform 0.5s;
 	transform-style: preserve-3d;
-	background-image: url('../images/enemy-symbol.png');
-	background-size: contain;
-	background-position: center;
-	background-repeat: no-repeat;
-	background-color: #6e6e6e;
 }
 
 .card-back {
@@ -47,6 +45,14 @@ h3 {
 	width: 100%;
 	backface-visibility: hidden;
 	z-index: -1;
+	box-shadow: 2px 2px 6px 2px #989898;
+	border: 6px solid #3e3e3e;
+	background-image: url('../images/enemy-symbol.png');
+	background-size: contain;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-color: #6e6e6e;
+	box-sizing: border-box;
 }
 
 .card-front {
@@ -55,6 +61,7 @@ h3 {
 	width: 100%;
 	transform: rotateY(180deg);
 	backface-visibility: hidden;
+	box-shadow: 2px 2px 6px 2px #989898;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
