feat: Portrait selection is now a slideshow

--- a/css/app.css
+++ b/css/app.css
@@ -133,6 +133,8 @@ h3 {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	height: 100px;
+	margin:5px;
 }
 
 .portrait {
@@ -145,7 +147,7 @@ h3 {
 	justify-content: flex-start;
 	align-items: center;
 	text-align: left;
-	margin: 10px;
+	margin: 5px;
 	padding: 5px;
 }
 
