--- a/css/app.css
+++ b/css/app.css
@@ -129,34 +129,36 @@ h3 {
 }
 
 /*Character creation*/
+.character-create {
+	height: 90%;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	align-items: center;
+}
+
+.detail-select {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
 .portrait-select {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	height: 100px;
 	margin:5px;
+	width: 50%;
 }
 
 .portrait {
-	width: 20%;
+	width: 80%;
 	margin: 5px;
 }
 
 .class {
-	display: flex;
-	justify-content: flex-start;
-	align-items: center;
-	text-align: left;
-	margin: 5px;
+	margin: 20px 5px;
 	padding: 5px;
-}
-
-.class-name {
-	width: 30%;
-}
-
-.class-description {
-	width: 60%;
 }
 
 .reroll {
@@ -174,6 +176,36 @@ h3 {
 	background-image: url('../images/town.jpg');
 	background-position: center;
 	background-size: 250%;
+}
+
+.levelup {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	align-items: center;
+	height: 85%;
+	margin: auto;
+}
+
+.levelup-stats {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.levelup-stat {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.levelup-stat-detail {
+	margin: 5px;
+	padding: 5px;
+	width: 70px;
+	border: 1px solid #6e6e6e;
+	font-size: 0.8em;
 }
 
 /*Battle screen*/
