--- a/css/app.css
+++ b/css/app.css
@@ -110,6 +110,14 @@ h3 {
 	background-color: #f5f5f5;
 }
 
+.ui-column {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	align-items: center;
+	height: 85%;
+}
+
 .ui-back {
 	border: 6px solid #3e3e3e;
 	background-image: url('../images/sword-symbol.png');
@@ -131,14 +139,6 @@ h3 {
 }
 
 /*Character creation*/
-.character-create {
-	height: 85%;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-around;
-	align-items: center;
-}
-
 .detail-select {
 	display: flex;
 	justify-content: center;
@@ -179,21 +179,8 @@ h3 {
 	background-size: 250%;
 }
 
-.levelup {
-	display: flex;
-	flex-direction: column;
-	justify-content: space-around;
-	align-items: center;
-	height: 85%;
-}
 
-.levelup-stats {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-}
-
+/*Levelup screen*/
 .levelup-stat {
 	display: flex;
 	justify-content: center;
@@ -208,22 +195,28 @@ h3 {
 	font-size: 0.8em;
 }
 
-/*Healer screen*/
-.healer {
-	display: flex;
-	flex-direction: column;
-	justify-content: space-around;
-	align-items: center;
-	height: 85%;
+/*Item store screen*/
+.town-log {
+	height: 20px;
 }
 
+.item-list {
+	height: 60%;
+	width: 50%;
+	text-align: left;
+	font-size: 0.8em;
+	overflow: auto;
+}
+
+.item {
+	margin: 5px auto;
+	padding: 5px;
+}
+
+/*Healer screen*/
 .options {
 	display: flex;
 	flex-direction: column;
-}
-
-.healer-log {
-	height: 20px;
 }
 
 /*Battle screen*/
@@ -264,10 +257,6 @@ h3 {
 	right: 5px;
 }
 
-.player-details {
-	
-}
-
 .stats {
 	width: 100%;
 	text-align: left;
@@ -276,21 +265,6 @@ h3 {
 .enemy-portrait {
 	width: 95%;
 	margin: auto;
-}
-
-/*Inventory screen*/
-.item-list {
-	height: 60%;
-	width: 50%;
-	margin: auto;
-	text-align: left;
-	font-size: 0.8em;
-	overflow: auto;
-}
-
-.item {
-	margin: 5px auto;
-	padding: 5px;
 }
 
 /*Modal and popup for when game is lost*/
