--- a/css/app.css
+++ b/css/app.css
@@ -8,15 +8,20 @@ body {
 	background-color: #dadada;
 }
 
-h1 {
+h1, h2, h3 {
 	font-family: Tangerine, cursive;
+}
+
+h1 {
 	font-size: 3em;
 }
 
-h2,
-h3 {
-	font-family: Tangerine, cursive;
+h2 {
 	font-size: 1.8em;
+}
+
+h3 {
+	font-size: 1.6em;
 }
 
 .centered {
@@ -165,13 +170,26 @@ h3 {
 }
 
 .reroll {
-	height: 90%;
+	height: 88%;
 	margin: auto;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-evenly;
 	align-items: center;
 }
+
+.reroll-table {
+	text-align: left;
+	border-collapse: collapse;
+	border: 1px solid #ccc;
+    width: 50%;
+}
+
+td {
+    padding: 5px;
+}
+
+.reroll-table tr:nth-child(even) {background-color: #eee;}
 
 /*Town Screen*/
 .town-screen {
@@ -203,9 +221,9 @@ h3 {
 
 .item-list {
 	height: 60%;
-	width: 50%;
+	width: 80%;
 	text-align: left;
-	font-size: 0.8em;
+	font-size: 0.9em;
 	overflow: auto;
 }
 
@@ -258,9 +276,32 @@ h3 {
 	right: 5px;
 }
 
-.stats {
-	width: 100%;
+.stat-table {
 	text-align: left;
+	border-collapse: collapse;
+    width: 100%;
+	font-size: 0.8em;
+}
+
+.stat-table tr:nth-child(even) {background-color: #f2f2f2;}
+
+.inventory-table {
+	text-align: left;
+	border-collapse: collapse;
+    width: 100%;
+}
+
+.inventory-table td {
+	height: 40px;
+	border-bottom: 1px solid #ccc;
+}
+
+.inventory-type {
+	width: 20%;
+}
+
+.inventory-icon {
+	width: 100%;
 }
 
 .enemy-portrait {
