--- a/css/app.css
+++ b/css/app.css
@@ -37,8 +37,10 @@ h2, h3 {
 }
 
 .game-area {
+	height: 400px;
+	width: 800px;
 	display: flex;
-	justify-content: center;
+	justify-content: space-around;
 	align-items: center;
 }
 
@@ -53,7 +55,6 @@ h2, h3 {
 .card-entity {
 	height: 400px;
 	width: 200px;
-	margin: 20px;
 }
 
 .card-ui {
@@ -171,6 +172,10 @@ h2, h3 {
 	padding: 5px;
 }
 
+.class:hover {
+	cursor: pointer;
+}
+
 .reroll {
 	height: 88%;
 	margin: auto;
@@ -242,6 +247,10 @@ td {
 .item {
 	margin: 5px auto;
 	padding: 5px;
+}
+
+.item:hover {
+	cursor: pointer;
 }
 
 /*Healer screen*/
@@ -351,4 +360,45 @@ td {
 @keyframes zoom {
     from {transform:scale(0)} 
     to {transform:scale(1)}
+}
+
+@media screen and (min-width: 601px) and (max-width: 800px) {
+	.game-area {
+		width: 600px;
+	}
+	
+	.town-screen {
+		background-size: 320%;
+	}
+	
+	.card-ui {
+		height: 350px;
+		width: 45%;
+	}
+	
+	.card-entity {
+		height: 350px;
+		width: 25%;
+	}
+}
+
+
+@media screen and (max-width: 600px) {
+	.game-area {
+		position: initial;
+		transform: initial;
+		margin: 20px auto;
+		flex-wrap: wrap;
+		justify-content: space-evenly;
+		height: 820px;
+		width: 450px;
+	}
+	
+	.card-ui {
+		order: 1;
+	}
+	
+	.card-entity {
+		order: 2;
+	}
 }
