--- a/css/app.css
+++ b/css/app.css
@@ -25,6 +25,7 @@ h2, h3 {
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+	-webkit-transform: translate(-50%, -50%);;
 }
 
 .text-right {
@@ -49,7 +50,9 @@ h2, h3 {
 	text-align: center;
 	position: relative;
 	transition: transform 0.5s;
+	-webkit-transition: transform 0.5s;
 	transform-style: preserve-3d;
+	-webkit-transform-style: preserve-3d;
 }
 
 .card-entity {
@@ -68,6 +71,7 @@ h2, h3 {
 	height: 100%;
 	width: 100%;
 	backface-visibility: hidden;
+	-webkit-backface-visibility: hidden;
 	z-index: -1;
 	box-shadow: 2px 2px 6px 2px #989898;
 	box-sizing: border-box;
@@ -78,12 +82,15 @@ h2, h3 {
 	height: 100%;
 	width: 100%;
 	transform: rotateY(180deg);
+	-webkit-transform: rotateY(180deg);
 	backface-visibility: hidden;
+	-webkit-backface-visibility: hidden;
 	box-shadow: 2px 2px 6px 2px #989898;
 }
 
 .flipped {
 	transform: rotateY(180deg);
+	-webkit-transform: rotateY(180deg);
 }
 
 .entity-back {
@@ -140,6 +147,7 @@ h2, h3 {
 	border-bottom: 1px solid;
 	text-shadow: 0px 0px 6px #313131;
 	transition: text-shadow 0.5s;
+	-webkit-transition: text-shadow 0.5s;
 }
 
 .btn-start:hover {
@@ -277,6 +285,7 @@ td {
 	bottom: 0;
 	left: 50%;
 	transform: translateX(-50%);
+	-webkit-transform: translateX(-50%);
 	height: 18%;
 	width: 80%;
 	display: flex;
@@ -354,7 +363,9 @@ td {
 	width: 250px;
 	text-align: center;
 	animation-name: zoom;
+	-webkit-animation-name: zoom;
     animation-duration: 0.6s;
+	-webkit-animation-duration: 0.6s;
 }
 
 @keyframes zoom {
@@ -387,6 +398,7 @@ td {
 	.game-area {
 		position: initial;
 		transform: initial;
+		-webkit-transform: initial;
 		margin: 20px auto;
 		flex-wrap: wrap;
 		justify-content: space-evenly;
