--- a/css/app.css
+++ b/css/app.css
@@ -143,8 +143,15 @@ h2, h3 {
 	background-color: #6e6e6e;
 }
 
+.title {
+	font-size: 4em;
+	text-shadow: 0px 0px 6px #313131;
+}
+
 .btn-start {
-	border-bottom: 1px solid;
+	position: absolute;;
+	bottom: 5%;
+	width: 90%;
 	text-shadow: 0px 0px 6px #313131;
 	transition: text-shadow 0.5s;
 	-webkit-transition: text-shadow 0.5s;
