--- a/css/app.css
+++ b/css/app.css
@@ -13,6 +13,7 @@ h1, h2, h3 {
 }
 
 h1 {
+	text-shadow: 0px 0px 4px white;
 	font-size: 3em;
 }
 
@@ -228,6 +229,23 @@ td {
 	width: 20px;
 }
 
+.town-controls {
+	width: 70%;
+}
+
+.btn-town {
+	font-size: 0.8em;
+	margin: 5px;
+	padding: 5px;
+	height: 75px;
+	width: 75px;
+}
+
+.town-btn-icon {
+	width: 60%;
+	margin: 5px;
+}
+
 
 /*Levelup screen*/
 .levelup-stat {
@@ -246,12 +264,14 @@ td {
 
 /*Item store screen*/
 .shop-screen {
-	/* background-image: url('../images/store.jpg');
+	background-image: url('../images/store.jpg');
 	background-position: center;
-	background-size: cover; */
+	background-size: cover;
 }
 
 .town-log {
+	color: white;
+	text-shadow: 0px 0px 2px black;
 	height: 20px;
 }
 
@@ -264,6 +284,7 @@ td {
 }
 
 .item {
+	background-color: white;
 	margin: 5px auto;
 	padding: 5px;
 }
@@ -274,14 +295,33 @@ td {
 
 /*Healer screen*/
 .healer-screen {
-	/* background-image: url('../images/healer.jpg');
+	background-image: url('../images/healer.jpg');
 	background-position: center;
-	background-size: cover; */
+	background-size: cover;
 }
 
 .options {
 	display: flex;
 	flex-direction: column;
+}
+
+.btn-healer {
+	display: flex;
+	font-size: 0.8em;
+	margin: 5px;
+	padding: 5px;
+	height: 60px;
+	width: 155px;
+}
+
+.heal-description {
+	font-weight: 700;
+	margin-bottom: 5px;
+}
+
+.healer-btn-icon {
+	width: 30%;
+	margin: 5px;
 }
 
 /*Battle screen*/
@@ -401,6 +441,10 @@ td {
 	.card-entity {
 		height: 350px;
 		width: 25%;
+	}
+
+	.inventory-table td {
+		height: 40px;
 	}
 }
 
