--- a/css/app.css
+++ b/css/app.css
@@ -13,7 +13,6 @@ h1, h2, h3 {
 }
 
 h1 {
-	text-shadow: 0px 0px 4px white;
 	font-size: 3em;
 }
 
@@ -139,16 +138,11 @@ h2, h3 {
 
 .ui-back {
 	border: 6px solid #3e3e3e;
-	background-image: url('../images/sword-symbol.png');
+	background-image: url('../images/large-dragon.png');
 	background-size: 80%;
 	background-position: center;
 	background-repeat: no-repeat;
 	background-color: #6e6e6e;
-}
-
-.title {
-	font-size: 4em;
-	text-shadow: 0px 0px 6px #313131;
 }
 
 .btn-start {
@@ -265,23 +259,6 @@ td {
 }
 
 /*Item store screen*/
-.shop-screen {
-	background-image: url('../images/store.jpg');
-	background-position: center;
-	background-size: cover;
-	color: white;
-}
-
-.shop-screen h1 {
-	text-shadow: 0px 0px 4px black;
-}
-
-.town-log {
-	color: white;
-	text-shadow: 0px 0px 2px black;
-	height: 20px;
-}
-
 .item-list {
 	height: 60%;
 	width: 80%;
@@ -302,12 +279,6 @@ td {
 }
 
 /*Healer screen*/
-.healer-screen {
-	background-image: url('../images/healer.jpg');
-	background-position: center;
-	background-size: cover;
-}
-
 .options {
 	display: flex;
 	flex-direction: column;
