--- a/css/app.css
+++ b/css/app.css
@@ -145,6 +145,10 @@ h2, h3 {
 	background-color: #6e6e6e;
 }
 
+.ui-back h1 {
+	text-shadow: 0px 0px 6px #313131;
+}
+
 .btn-start {
 	position: absolute;;
 	bottom: 5%;
