--- a/css/app.css
+++ b/css/app.css
@@ -43,8 +43,13 @@ h1 {
 	font-size: 3em;
 }
 
-h2, h3 {
+h2 {
 	font-size: 1.8em;
+}
+
+h3 {
+	font-size: 1.6em;
+	font-weight: 400;
 }
 
 .centered {
@@ -361,6 +366,10 @@ td, th {
 }
 
 /*Player card*/
+.level {
+	color: red;
+}
+
 .player-portrait {
 	width: 65%;
 	min-width: 120px;
@@ -377,7 +386,7 @@ td, th {
 	text-align: left;
 	border-collapse: collapse;
     width: 100%;
-	font-size: 0.8em;
+	font-size: 0.7em;
 }
 
 .stat {
@@ -388,6 +397,23 @@ td, th {
 
 .stat-modifier {
 	color: #348d37;
+}
+
+.add-stats {
+	margin-top: 4px;
+	width: 100%;
+	display: flex;
+	justify-content: space-around;
+	font-size: 0.7em;
+}
+
+.add-stat {
+	display: flex;
+	align-items: center;
+}
+
+.stat-icon {
+	width: 15px;
 }
 
 /*Inventory*/
