--- a/css/app.css
+++ b/css/app.css
@@ -408,12 +408,24 @@ td, th {
 }
 
 .add-stat {
+	position: relative;
 	display: flex;
 	align-items: center;
 }
 
 .stat-icon {
 	width: 15px;
+}
+
+.stat-tag {
+	display: none;
+	position: absolute;
+	background-color: #f3f3f3;
+	border: 0.1px solid #909090;
+	left: 50%;
+	bottom: 20px;
+	transform: translateX(-50%);
+	padding: 6px;
 }
 
 /*Inventory*/
