--- a/css/app.css
+++ b/css/app.css
@@ -52,6 +52,10 @@ h3 {
 	font-weight: 400;
 }
 
+.red {
+	color: red;
+}
+
 .centered {
 	position: absolute;
 	top: 50%;
@@ -220,7 +224,7 @@ input[type=text] {
 
 .portrait-select {
 	display: flex;
-	justify-content: center;
+	justify-content: space-around;
 	align-items: center;
 	margin:5px;
 	width: 50%;
@@ -372,10 +376,6 @@ td, th {
 }
 
 /*Player card*/
-.level {
-	color: red;
-}
-
 .player-portrait {
 	width: 65%;
 	min-width: 120px;
