--- a/css/app.css
+++ b/css/app.css
@@ -72,9 +72,54 @@ h3 {
 	text-align: right;
 }
 
+/*Buttons*/
 .btn {
 	margin: 5px;
 	padding: 5px;
+}
+
+.btn-corner {
+	color: #e0e0e0;
+	background-color: black;
+	border: none;
+	border-top-left-radius: 5px;
+	position: absolute;
+	padding: 5px;
+	bottom: 0;
+	right: 0;
+	transition: 0.4s;
+}
+
+.btn-corner:hover {
+	background-color: #2e509c;
+	cursor: pointer;
+}
+
+.btn-large {
+	border: none;
+	border-radius: 10px;
+	background-color: rgba(235, 235, 235, 0.8);
+	transition: 0.4s;
+	font-size: 0.8em;
+	height: 70px;
+	width: 70px;
+}
+
+.btn-large:hover {
+	background-color: rgba(235, 235, 235, 1);
+	cursor: pointer;
+}
+
+.town-btn-icon {
+	width: 50%;
+	margin: 5px;
+}
+
+.btn-healer {
+	display: flex;
+	font-size: 0.8em;
+	height: 60px;
+	width: 155px;
 }
 
 .game-area {
@@ -180,10 +225,6 @@ h3 {
 	height: 80%;
 }
 
-.tall-column {
-	height: 85%;
-}
-
 .ui-back {
 	border: 6px solid #3e3e3e;
 	background-image: url('../images/large-dragon.png');
@@ -250,15 +291,6 @@ input[type=text] {
 	cursor: pointer;
 }
 
-.reroll {
-	height: 88%;
-	margin: auto;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-evenly;
-	align-items: center;
-}
-
 .reroll-table {
 	text-align: left;
 	border-collapse: collapse;
@@ -287,20 +319,6 @@ td, th {
 	width: 70%;
 }
 
-.btn-town {
-	font-size: 0.8em;
-	margin: 5px;
-	padding: 5px;
-	height: 75px;
-	width: 75px;
-}
-
-.town-btn-icon {
-	width: 60%;
-	margin: 5px;
-}
-
-
 /*Levelup screen*/
 .levelup-stat {
 	display: flex;
@@ -328,15 +346,6 @@ td, th {
 .options {
 	display: flex;
 	flex-direction: column;
-}
-
-.btn-healer {
-	display: flex;
-	font-size: 0.8em;
-	margin: 5px;
-	padding: 5px;
-	height: 60px;
-	width: 155px;
 }
 
 .heal-description {
