--- a/css/app.css
+++ b/css/app.css
@@ -5,28 +5,29 @@
 
 /*Loader*/
 #loader {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  z-index: 1;
-  width: 100px;
-  height: 100px;
-  margin: -75px 0 0 -75px;
-  border: 8px solid #f3f3f3;
-  border-radius: 50%;
-  border-top: 8px solid #585858;
-  -webkit-animation: spin 2s linear infinite;
-  animation: spin 2s linear infinite;
+	box-sizing: border-box;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	z-index: 1;
+	width: 100px;
+	height: 100px;
+	margin: -50px 0 0 -50px;
+	border: 8px solid #f3f3f3;
+	border-radius: 50%;
+	border-top: 8px solid #585858;
+	-webkit-animation: spin 2s linear infinite;
+	animation: spin 2s linear infinite;
 }
 
 @-webkit-keyframes spin {
-  0% { -webkit-transform: rotate(0deg); }
-  100% { -webkit-transform: rotate(360deg); }
+	0% { -webkit-transform: rotate(0deg); }
+	100% { -webkit-transform: rotate(360deg); }
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+	0% { transform: rotate(0deg); }
+	100% { transform: rotate(360deg); }
 }
 
 /*Body styles*/
